# snappystream

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  snappy-stream.cfg  snappystream.cfg
cmake/Modules/: FindSnappy.cmake  Vendoring.cmake  gtest.cmake
cmake/ext/: nx_utils.cmake
doc/: CMakeLists.txt  doxygen  doxygen.cmake  index.h
doc/examples/: example_main.cpp
include/: InputSnappyStreamBoostFilter.hpp  OutputSnappyStreamBoostFilter.hpp  isnappystream.hpp  osnappystream.hpp  snappy-stream.h  snappystream.hpp
misc/: FindSnappyStream.cmake  calc-crc32c.cpp  snap.cpp  snappystream-0.1.ebuild  snappystream-9999.ebuild  snappystream.spec
src/: crc32c.c  crc32c.h  crc32c.hpp  endians.hpp  isnappystream.cpp  osnappystream.cpp  snappy-stream.cpp  snappystreamcfg.cpp
test/: CMakeLists.txt  tboost_filters.hpp  tcrc32c.hpp  test.cpp  tsnappy-stream.hpp  tsnappystream.hpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
